--- a/apps/base/service.yaml
+++ b/apps/base/service.yaml
@@ -1,21 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
-  namespace: default # Or your target namespace
+  name: hello-world-service
+  namespace: demo
   labels:
-    app: nginx
+    app: hello-world
     environment: demo
   annotations:
-    # For OCI Load Balancer (uncomment as needed):
     oci.oraclecloud.com/load-balancer-shape: "flexible"
     oci.oraclecloud.com/load-balancer-shape-flex-min: "10"
     oci.oraclecloud.com/load-balancer-shape-flex-max: "100"
-    # service.beta.kubernetes.io/oci-load-balancer-internal: "true" # If internal LB needed
 spec:
   type: LoadBalancer # Use ClusterIP if you don't want an external LB, or NodePort
   selector:
-    app: nginx
+    app: hello-world
   ports:
     - protocol: TCP
       port: 80
