--- a/apps/base/service.yaml
+++ b/apps/base/service.yaml
@@ -15,7 +15,6 @@ spec:
   selector:
     app: hello-world
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 80
       targetPort: 80
       name: http 
