--- a/apps/base/deployment.yaml
+++ b/apps/base/deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-world-deployment
+  name: nginx-deployment
   namespace: demo
   labels:
-    app: hello-world
+    app: nginx
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: hello-world
+      app: nginx
   template:
     metadata:
       labels:
-        app: hello-world
+        app: nginx
     spec:
       containers:
-      - name: hello-world
-        image: dockercloud/hello-world:latest
+      - name: nginx
+        image: nginx:1.25
         ports:
         - containerPort: 80
         resources:
@@ -27,4 +27,10 @@ spec:
           limits:
             cpu: 200m
             memory: 256Mi
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 10
  
