--- a/apps/base/service.yaml
+++ b/apps/base/service.yaml
@@ -1,20 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world-service
+  name: nginx-service
   namespace: demo
   labels:
-    app: hello-world
+    app: nginx
     environment: demo
   annotations:
+    # For OCI Load Balancer (uncomment as needed):
     oci.oraclecloud.com/load-balancer-shape: "flexible"
     oci.oraclecloud.com/load-balancer-shape-flex-min: "10"
     oci.oraclecloud.com/load-balancer-shape-flex-max: "100"
+    # service.beta.kubernetes.io/oci-load-balancer-internal: "true" # If internal LB needed
 spec:
   type: LoadBalancer # Use ClusterIP if you don't want an external LB, or NodePort
   selector:
-    app: hello-world
+    app: nginx
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
       name: http 
