--- a/infrastructure/base/namespace.yaml
+++ b/infrastructure/base/namespace.yaml
@@ -2,3 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: demo
+  labels:
+    app: my-app
+    environment: demo
+    istio-injection: enabled
