--- a/infrastructure/base/weave-gitops-repository.yaml
+++ b/infrastructure/base/weave-gitops-repository.yaml
@@ -1,8 +1,9 @@
-apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: weave-gitops
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://helm.gitops.weave.works 
+  url: https://charts.weaveworks.io
+  timeout: 3m0s 
