--- a/apps/base/deployment.yaml
+++ b/apps/base/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: nginx
@@ -17,8 +17,8 @@ spec:
     spec:
       containers:
       - name: nginx
-#        image: nginx:1.25
-        image: nginx:latest
+        image: nginx:1.25
+#        image: nginx:latest
         ports:
         - containerPort: 80
         resources:
